test/shouldFail/controlFlow/ifNum.pas
program Sample;
var
  i : integer = 0;
  
begin 
// If condition must be boolean but is integer
//   v
  if i then
    i := i + 1;
end.
